Resources/Parsers/alpaca/alpacaParser.js
// Generated from C:/Users/megam/jupyter_ops/Resources/Parsers/alpaca/alpaca.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import alpacaListener from './alpacaListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class alpacaParser extends antlr4.Parser {

    static grammarFileName = "alpaca.g4";
    static literalNames = [ null, "'.'", "'begin'", "';'", "'state'", "'class'", 
                            "'neighbourhood'", "'is'", "','", "'to'", "'when'", 
                            "'me'", "'and'", "'or'", "'xor'", "'('", "')'", 
                            "'not'", "'='", "'in'", "'true'", "'false'", 
                            "'guess'", null, "'\"'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, "QUOTEDCHAR", 
                             "QUOTE", "ALPHA", "DIGIT", "ARROW", "COMMENT", 
                             "WS" ];
    static ruleNames = [ "prog", "defns", "defn", "stateDefn", "classDefn", 
                         "nbhdDefn", "classID", "stateID", "nbhdID", "membershipDecl", 
                         "classRef", "rules", "rule_", "stateRef", "expression", 
                         "term", "relationalPred", "adjacencyPred", "boolPrimitive", 
                         "neigbourhood", "identifier", "naturalnumber", 
                         "arrowchain" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = alpacaParser.ruleNames;
        this.literalNames = alpacaParser.literalNames;
        this.symbolicNames = alpacaParser.symbolicNames;
    }



	prog() {
	    let localctx = new ProgContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, alpacaParser.RULE_prog);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 46;
	        this.defns();
	        this.state = 47;
	        _la = this._input.LA(1);
	        if(!(_la===1 || _la===2)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 48;
	        this.match(alpacaParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	defns() {
	    let localctx = new DefnsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, alpacaParser.RULE_defns);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 50;
	        this.defn();
	        this.state = 55;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===3) {
	            this.state = 51;
	            this.match(alpacaParser.T__2);
	            this.state = 52;
	            this.defn();
	            this.state = 57;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	defn() {
	    let localctx = new DefnContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, alpacaParser.RULE_defn);
	    try {
	        this.state = 61;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 4:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 58;
	            this.stateDefn();
	            break;
	        case 5:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 59;
	            this.classDefn();
	            break;
	        case 6:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 60;
	            this.nbhdDefn();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	stateDefn() {
	    let localctx = new StateDefnContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, alpacaParser.RULE_stateDefn);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 63;
	        this.match(alpacaParser.T__3);
	        this.state = 64;
	        this.stateID();
	        this.state = 66;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===23) {
	            this.state = 65;
	            this.match(alpacaParser.QUOTEDCHAR);
	        }

	        this.state = 71;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===7) {
	            this.state = 68;
	            this.membershipDecl();
	            this.state = 73;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 75;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===9) {
	            this.state = 74;
	            this.rules();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	classDefn() {
	    let localctx = new ClassDefnContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, alpacaParser.RULE_classDefn);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 77;
	        this.match(alpacaParser.T__4);
	        this.state = 78;
	        this.classID();
	        this.state = 82;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===7) {
	            this.state = 79;
	            this.membershipDecl();
	            this.state = 84;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 86;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===9) {
	            this.state = 85;
	            this.rules();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	nbhdDefn() {
	    let localctx = new NbhdDefnContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, alpacaParser.RULE_nbhdDefn);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 88;
	        this.match(alpacaParser.T__5);
	        this.state = 89;
	        this.nbhdID();
	        this.state = 90;
	        this.neigbourhood();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	classID() {
	    let localctx = new ClassIDContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, alpacaParser.RULE_classID);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 92;
	        this.identifier();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	stateID() {
	    let localctx = new StateIDContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, alpacaParser.RULE_stateID);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 94;
	        this.identifier();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	nbhdID() {
	    let localctx = new NbhdIDContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, alpacaParser.RULE_nbhdID);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 96;
	        this.identifier();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	membershipDecl() {
	    let localctx = new MembershipDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, alpacaParser.RULE_membershipDecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 98;
	        this.classRef();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	classRef() {
	    let localctx = new ClassRefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, alpacaParser.RULE_classRef);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 100;
	        this.match(alpacaParser.T__6);
	        this.state = 101;
	        this.classID();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	rules() {
	    let localctx = new RulesContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, alpacaParser.RULE_rules);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 103;
	        this.rule_();
	        this.state = 108;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===8) {
	            this.state = 104;
	            this.match(alpacaParser.T__7);
	            this.state = 105;
	            this.rule_();
	            this.state = 110;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	rule_() {
	    let localctx = new Rule_Context(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, alpacaParser.RULE_rule_);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 111;
	        this.match(alpacaParser.T__8);
	        this.state = 112;
	        this.stateRef();
	        this.state = 115;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===10) {
	            this.state = 113;
	            this.match(alpacaParser.T__9);
	            this.state = 114;
	            this.expression();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	stateRef() {
	    let localctx = new StateRefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, alpacaParser.RULE_stateRef);
	    try {
	        this.state = 120;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 25:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 117;
	            this.stateID();
	            break;
	        case 27:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 118;
	            this.arrowchain();
	            break;
	        case 11:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 119;
	            this.match(alpacaParser.T__10);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expression() {
	    let localctx = new ExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, alpacaParser.RULE_expression);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 122;
	        this.term();
	        this.state = 127;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 28672) !== 0)) {
	            this.state = 123;
	            _la = this._input.LA(1);
	            if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 28672) !== 0))) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 124;
	            this.term();
	            this.state = 129;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	term() {
	    let localctx = new TermContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, alpacaParser.RULE_term);
	    try {
	        this.state = 139;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 26:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 130;
	            this.adjacencyPred();
	            break;
	        case 15:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 131;
	            this.match(alpacaParser.T__14);
	            this.state = 132;
	            this.expression();
	            this.state = 133;
	            this.match(alpacaParser.T__15);
	            break;
	        case 17:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 135;
	            this.match(alpacaParser.T__16);
	            this.state = 136;
	            this.term();
	            break;
	        case 20:
	        case 21:
	        case 22:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 137;
	            this.boolPrimitive();
	            break;
	        case 11:
	        case 25:
	        case 27:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 138;
	            this.relationalPred();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	relationalPred() {
	    let localctx = new RelationalPredContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, alpacaParser.RULE_relationalPred);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 141;
	        this.stateRef();
	        this.state = 147;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 11:
	        case 18:
	        case 25:
	        case 27:
	            this.state = 143;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===18) {
	                this.state = 142;
	                this.match(alpacaParser.T__17);
	            }

	            this.state = 145;
	            this.stateRef();
	            break;
	        case 7:
	            this.state = 146;
	            this.classRef();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	adjacencyPred() {
	    let localctx = new AdjacencyPredContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, alpacaParser.RULE_adjacencyPred);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 149;
	        this.naturalnumber();
	        this.state = 155;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===19) {
	            this.state = 150;
	            this.match(alpacaParser.T__18);
	            this.state = 153;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 15:
	                this.state = 151;
	                this.neigbourhood();
	                break;
	            case 25:
	                this.state = 152;
	                this.nbhdID();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	        }

	        this.state = 159;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 11:
	        case 25:
	        case 27:
	            this.state = 157;
	            this.stateRef();
	            break;
	        case 7:
	            this.state = 158;
	            this.classRef();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	boolPrimitive() {
	    let localctx = new BoolPrimitiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, alpacaParser.RULE_boolPrimitive);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 161;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 7340032) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	neigbourhood() {
	    let localctx = new NeigbourhoodContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, alpacaParser.RULE_neigbourhood);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 163;
	        this.match(alpacaParser.T__14);
	        this.state = 167;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===27) {
	            this.state = 164;
	            this.arrowchain();
	            this.state = 169;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 170;
	        this.match(alpacaParser.T__15);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	identifier() {
	    let localctx = new IdentifierContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, alpacaParser.RULE_identifier);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 172;
	        this.match(alpacaParser.ALPHA);
	        this.state = 176;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,18,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 173;
	                _la = this._input.LA(1);
	                if(!(_la===25 || _la===26)) {
	                this._errHandler.recoverInline(this);
	                }
	                else {
	                	this._errHandler.reportMatch(this);
	                    this.consume();
	                } 
	            }
	            this.state = 178;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,18,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	naturalnumber() {
	    let localctx = new NaturalnumberContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 42, alpacaParser.RULE_naturalnumber);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 180; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 179;
	            this.match(alpacaParser.DIGIT);
	            this.state = 182; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===26);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	arrowchain() {
	    let localctx = new ArrowchainContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 44, alpacaParser.RULE_arrowchain);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 185; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 184;
	        		this.match(alpacaParser.ARROW);
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 187; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,20, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

alpacaParser.EOF = antlr4.Token.EOF;
alpacaParser.T__0 = 1;
alpacaParser.T__1 = 2;
alpacaParser.T__2 = 3;
alpacaParser.T__3 = 4;
alpacaParser.T__4 = 5;
alpacaParser.T__5 = 6;
alpacaParser.T__6 = 7;
alpacaParser.T__7 = 8;
alpacaParser.T__8 = 9;
alpacaParser.T__9 = 10;
alpacaParser.T__10 = 11;
alpacaParser.T__11 = 12;
alpacaParser.T__12 = 13;
alpacaParser.T__13 = 14;
alpacaParser.T__14 = 15;
alpacaParser.T__15 = 16;
alpacaParser.T__16 = 17;
alpacaParser.T__17 = 18;
alpacaParser.T__18 = 19;
alpacaParser.T__19 = 20;
alpacaParser.T__20 = 21;
alpacaParser.T__21 = 22;
alpacaParser.QUOTEDCHAR = 23;
alpacaParser.QUOTE = 24;
alpacaParser.ALPHA = 25;
alpacaParser.DIGIT = 26;
alpacaParser.ARROW = 27;
alpacaParser.COMMENT = 28;
alpacaParser.WS = 29;

alpacaParser.RULE_prog = 0;
alpacaParser.RULE_defns = 1;
alpacaParser.RULE_defn = 2;
alpacaParser.RULE_stateDefn = 3;
alpacaParser.RULE_classDefn = 4;
alpacaParser.RULE_nbhdDefn = 5;
alpacaParser.RULE_classID = 6;
alpacaParser.RULE_stateID = 7;
alpacaParser.RULE_nbhdID = 8;
alpacaParser.RULE_membershipDecl = 9;
alpacaParser.RULE_classRef = 10;
alpacaParser.RULE_rules = 11;
alpacaParser.RULE_rule_ = 12;
alpacaParser.RULE_stateRef = 13;
alpacaParser.RULE_expression = 14;
alpacaParser.RULE_term = 15;
alpacaParser.RULE_relationalPred = 16;
alpacaParser.RULE_adjacencyPred = 17;
alpacaParser.RULE_boolPrimitive = 18;
alpacaParser.RULE_neigbourhood = 19;
alpacaParser.RULE_identifier = 20;
alpacaParser.RULE_naturalnumber = 21;
alpacaParser.RULE_arrowchain = 22;

class ProgContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = alpacaParser.RULE_prog;
    }

	defns() {
	    return this.getTypedRuleContext(DefnsContext,0);
	};

	EOF() {
	    return this.getToken(alpacaParser.EOF, 0);
	};

	enterRule(listener) {
	    if(listener instanceof alpacaListener ) {
	        listener.enterProg(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof alpacaListener ) {
	        listener.exitProg(this);
		}
	}


}



class DefnsContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = alpacaParser.RULE_defns;
    }

	defn = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(DefnContext);
	    } else {
	        return this.getTypedRuleContext(DefnContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof alpacaListener ) {
	        listener.enterDefns(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof alpacaListener ) {
	        listener.exitDefns(this);
		}
	}


}



class DefnContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = alpacaParser.RULE_defn;
    }

	stateDefn() {
	    return this.getTypedRuleContext(StateDefnContext,0);
	};

	classDefn() {
	    return this.getTypedRuleContext(ClassDefnContext,0);
	};

	nbhdDefn() {
	    return this.getTypedRuleContext(NbhdDefnContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof alpacaListener ) {
	        listener.enterDefn(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof alpacaListener ) {
	        listener.exitDefn(this);
		}
	}


}



class StateDefnContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = alpacaParser.RULE_stateDefn;
    }

	stateID() {
	    return this.getTypedRuleContext(StateIDContext,0);
	};

	QUOTEDCHAR() {
	    return this.getToken(alpacaParser.QUOTEDCHAR, 0);
	};

	membershipDecl = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(MembershipDeclContext);
	    } else {
	        return this.getTypedRuleContext(MembershipDeclContext,i);
	    }
	};

	rules() {
	    return this.getTypedRuleContext(RulesContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof alpacaListener ) {
	        listener.enterStateDefn(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof alpacaListener ) {
	        listener.exitStateDefn(this);
		}
	}


}



class ClassDefnContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = alpacaParser.RULE_classDefn;
    }
